cmake_minimum_required(VERSION 3.0)
project(zvtrajlib VERSION 0.1)
set(CMAKE_CXX_STANDARD 11)
include_directories("${CMAKE_CURRENT_SOURCE_DIR}")
add_subdirectory(libxdr)
add_subdirectory(interface)
add_subdirectory(io)
add_subdirectory(analysis)
add_executable(test test.cpp)
target_link_libraries(test PRIVATE INTERFACE IO ANALYSIS)
